// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/openapi/openapi Number number enum 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "description": "Parameter without description.",
            "in": "query",
            "name": "option",
            "required": false,
            "schema": {
              "description": "Parameter without description.",
              "enum": [
                4.1,
                10,
                20,
              ],
              "format": "double",
              "type": "number",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Number number enum all options 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "description": "Sensor value.",
            "example": 30.3,
            "in": "query",
            "name": "sensor",
            "required": true,
            "schema": {
              "default": 10.1,
              "description": "Sensor value.",
              "enum": [
                10.1,
                20.2,
                30.3,
              ],
              "format": "double",
              "nullable": true,
              "type": "number",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Number number enum default is part of enum 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "description": "Integer options from enum",
            "in": "query",
            "name": "option",
            "required": false,
            "schema": {
              "default": 20,
              "description": "Integer options from enum",
              "enum": [
                10,
                20,
                30,
              ],
              "format": "double",
              "type": "number",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Number number enum default is undefined because is NOT in enum 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "description": "Integer options from enum",
            "in": "query",
            "name": "option",
            "required": false,
            "schema": {
              "default": 12,
              "description": "Integer options from enum",
              "enum": [
                10,
                20,
                30,
              ],
              "format": "double",
              "type": "number",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Number number enum min and max should be skipped (the values are already limited) 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "description": "Integer options from enum",
            "in": "query",
            "name": "option",
            "required": false,
            "schema": {
              "description": "Integer options from enum",
              "enum": [
                3,
                6,
                9,
              ],
              "format": "double",
              "type": "number",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Number number simple 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "description": "Parameter without description.",
            "in": "query",
            "name": "user_name",
            "required": false,
            "schema": {
              "description": "Parameter without description.",
              "format": "double",
              "type": "number",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Number number simple all options 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "description": "Sensor value. (min:0.5, max:100.66)",
            "example": 33.333,
            "in": "query",
            "name": "sensor",
            "required": true,
            "schema": {
              "default": 1,
              "description": "Sensor value. (min:0.5, max:100.66)",
              "format": "double",
              "maximum": 100.66,
              "minimum": 0.5,
              "nullable": true,
              "type": "number",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;
